Refactor StatementParser